<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:id="@+id/container"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:shadowColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:visibility="visible" />
    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:hint="@string/lblMail"
        android:visibility="visible" />


    <EditText
        android:id="@+id/edMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblMail"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCuit"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblCuit"
        android:inputType="number"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMoneda"
        android:visibility="visible" />

    <RadioGroup
        android:id="@+id/optMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optDolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/lblMonedaDolar"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/optPesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/lblMonedaPesos"
            android:visibility="visible" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMontoInvertir"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblMonto"
        android:inputType="number"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDias"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/seekDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="180"
        android:text="@string/lblDiasSeleccionado"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvDiasSeleccionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDiasSeleccionado"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblIntereses"
        android:visibility="visible" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tvAvisarVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAvisarVencimiento"
            android:visibility="visible" />

        <Switch
            android:id="@+id/swAvisarVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />


    </LinearLayout>

    <ToggleButton
        android:id="@+id/togAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/lblAcreditarEnCuenta"
        android:textOff="@string/lblAccionVencimientoAcreditar"
        android:textOn="@string/lblAccionVencimientoRenovar"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/chkAceptoTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAceptarTerminosyCondiciones"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblHacerPlazoFijo"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/lblMensaje" />


</LinearLayout>